--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -100,7 +100,7 @@ tours.modal.button.confirm=Confirm
 
 validation.tour.name.not_blank=Name can't be blank
 validation.tour.name.size=Name must be between 5 and 100 characters length.
-validation.tour.type.not_null=Importance can't be blank
+validation.tour.type.not_null=Tour type can't be blank
 validation.tour.price.positive = Tour price must be higher than 0
 validation.tour.group_size.positive = Group size must be more than 0
 validation.tour.description.size=Description is too long (maximum is 200 characters)
@@ -151,12 +151,16 @@ orders.discount.button.submit = Set discount
 orders.id=Id
 orders.user=User
 orders.tour=Tour
+orders.price=Price
+orders.discount=Discount
+orders.fixed_price=Fixed price
 orders.status=Status
 orders.status.button.mark_paid=Paid
 orders.status.button.mark_denied=Denied
 orders.tour.modal.status.button.delete_order=Revoke
 
 users.profile.welcome=Welcome,
+users.modal.title=User info
 users.profile.username=Username:
 users.profile.full_name=Full name:
 users.profile.email=Email:
@@ -175,4 +179,6 @@ users.profile.orders.status=Status
 users.profile.orders.status.pending=Pending
 users.profile.orders.status.paid=Paid
 users.profile.orders.status.denied=Denied
+users.status.ban=Ban
+users.status.unban=
 
