--- a/src/main/resources/i18n/messages_ua.properties
+++ b/src/main/resources/i18n/messages_ua.properties
@@ -146,9 +146,7 @@ orders.discount.button.submit = Встановити знижку
 orders.id=ІД
 orders.user=Користувач
 orders.tour=Тур
-orders.order_date=Дата
 orders.status=Статус
-orders.status.button.mark_pending=Зареєстровано
 orders.status.button.mark_paid=Сплачено
 orders.status.button.mark_denied=Скасовано
 orders.tour.modal.status.button.delete_order=Відмінити
@@ -172,3 +170,17 @@ users.profile.orders.status=Статус
 users.profile.orders.status.pending=Зареєстровано
 users.profile.orders.status.paid=Сплачено
 users.profile.orders.status.denied=Скасовано
+validation.tour.name.not_blank=Ім'я не може бути порожнім
+validation.tour.name.size=Ім'я має бути від 5 до 100 символів довжиною.
+validation.tour.type.not_null=Тип туру не може бути порожнім
+validation.tour.description.size=Опис занадто довгий (максимум 200 символів).
+users.update.full_name.label=Повне ім'я:
+users.update.full_name.placeholder=Введіть повне ім'я
+users.update.email.label=Електронна пошта:
+users.update.email.placeholder=Введіть адресу
+users.update.bio.label=Біо:
+users.update.bio.placeholder=Введіть біо
+orders.price=Ціна
+orders.discount=Знижка
+orders.fixed_price=Ціна (зі знижкою)
+users.modal.title=Інформація про користувача
