--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -103,7 +103,7 @@ tours.modal.button.confirm=Confirm
 
 validation.tour.name.not_blank=Name can't be blank
 validation.tour.name.size=Name must be between 5 and 100 characters length.
-validation.tour.type.not_null=Importance can't be blank
+validation.tour.type.not_null=Tour type can't be blank
 validation.tour.price.positive = Tour price must be higher than 0
 validation.tour.group_size.positive = Group size must be more than 0
 validation.tour.description.size=Description is too long (maximum is 200 characters)
@@ -175,4 +175,12 @@ users.profile.orders.status=Status
 users.profile.orders.status.pending=Pending
 users.profile.orders.status.paid=Paid
 users.profile.orders.status.denied=Denied
+users.profile.orders.price_total=Total price :
+users.profile.orders.discount_current=Discount :
+users.profile.orders.discount=Discount
+users.profile.orders.price_fixed=Fixed price
+orders.price=Price
+orders.discount=Discount
+orders.fixed_price=Fixed price
+users.modal.title=User info
 
